fix: mise à jour des traductions de la partie getdevice

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -97,6 +97,7 @@
   "lessFilters": "Moins de filtres",
   "applyFilters": "Appliquer / Rafraichir",
   "chooseOnePartner": "Veuillez choisir un partenaire",
+  "population": "Population",
   "card": "Carte",
   "days": "Jours",
   "map": {
