--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -826,6 +826,7 @@
           "deviceInfo": "Matériel et constructeur",
           "pin2": "Code PIN2",
           "puk": "Codes PUK",
+          "puk2": "Codes PUK2",
           "accessPointId": "Identifiant point d’accès",
           "electricProfile": "Profil électrique",
           "graphicProfile": "Profile graphique",
