FIXPROD: Changement de la traduction de frequency dans le tableau de getDevice

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1762,6 +1762,7 @@
     "specificFields": "Champ spécifique {num}",
     "manufacturerIMEI": "Fabricant (IMEI)",
     "frequency": "Fréquence",
+    "freqTheo": "Fréquences théoriques",
     "lastCountry": "Dernier pays (ancien PLMN)",
     "statuses": {
       "NOT_VALIDATED": "Non validée",
