fix: 1845 réglages d'affichage dans le détail d'un partenaire MVNO

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -736,7 +736,7 @@
       "vpn": "VPN :",
       "group": "Groupe :",
       "contract": "contrat",
-      "partyGroup": "Compte groupe :",
+      "partyGroup": "Compte groupe",
       "selectPartyGroup": "Sélectionner un compte groupe",
       "partnerTree": "Arborescence des partenaires :",
       "partnerType": "Type de partenaire :",
