fix: 1845 1956 gestion des permissions pour le détail de partenaire

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -727,6 +727,7 @@
       "bscs": "Compte root BSCS :",
       "label": "Libellé :",
       "company": "Societé :",
+      "actBlock": "Blocage des actes de gestion",
       "contractReference": "Référence du contrat cadre :",
       "contractDate": "Date du contrat :",
       "contractExpiration": "Fin du contrat :",
