FIX: Changer SIRET pour SIREN sur le CF Marque blanche

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -674,6 +674,7 @@
         "name": "Libellé de l’établissement",
         "marketLine": "Ligne de marché",
         "siret": "N° siret",
+        "siren": "N° siren",
         "status": "Statut",
         "commercialOffer": "Offres commerciales",
         "simCards": "Cartes SIM",
