feat:  tranches MSISN d'un partenaire MVNO

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -561,6 +561,17 @@
       "options": "Partner options",
       "accountDescription": "Description of partner account",
       "total": "{total} partner (s) found",
+      "m2mRange": {
+        "counters": "Counters",
+        "title": "MSISDN ranges",
+        "active": "MSISDN range enabled",
+        "locked": "MSISDN range locked",
+        "code": "MSISDN range code",
+        "available": "Availables MSISDN",
+        "preactivated": "Used MSISDN",
+        "quarantine":"Quarantined MSISDN",
+        "unavailable": "Unavailables MSISDN"
+      },
       "optionsDetails": {
         "smsCodes": "Short codes SMS",
         "notifyEmail": "Email notification",
