--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -188,7 +188,7 @@
   },
   "mainMenu": {
     "getSim": "GetSIM",
-    "getHere": "GetParc(GetDiag)",
+    "getParc": "GetParc(GetDiag)",
     "getVision": "GetVision",
     "getAlarm": "GetAlarme",
     "getSupport": "GetSupport",
