fix: 1969 mise à jour de l'acte de gestion de préactivation / activation pour les MVNO

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -182,7 +182,7 @@
     "partners": "Partners management",
     "admins": "Admins management",
     "account": "Account",
-    "modelReports": "Reports",
+    "modelReports": "Reports management",
     "createReports": "documents management",
     "reportsDashboard": "Dashborad",
     "reportsBill": "Invoices",
