--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -206,7 +206,7 @@
     "partners": "Gestion des partenaires",
     "admins": "Gestion des administrateurs",
     "account": "Compte",
-    "modelReports": "Rapports",
+    "modelReports": "Gestion des rapports",
     "createReports": "Gestion documentaires",
     "reportsDashboard": "Tableau de bord",
     "reportsBill": "Factures",
