FIX: Ajout de la traduction pour fréquences théoriques en anglais

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -1651,6 +1651,7 @@
     "creationDate": "Creation date",
     "orderDate": "Order date",
     "activationAsked": "Activation",
+    "freqTheo": "Theoretical frequencies",
     "company": "Society",
     "label": "Label",
     "preActivationAsked": "Pre-activation",
