FEAT: Ajout de l'action de suspension de facturation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1422,6 +1422,7 @@
         "CONSUMING": "En cours consommation",
         "EXPORT_CONS": "Export consommation",
         "SUSPEND": "Suspendre des lignes",
+        "SUSPEND_BILLS": "Suspendre la facturation",
         "MANAGE_ALARMS": "Gérer des alarmes",
         "EXPORT_LAST_USAGE": "Export dernier usage",
         "CHANGE_CF": "Changement de C.F.",
