fix: chercher une ligne par ID comme prérequis de la création d'un acte de gestion

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1418,6 +1418,8 @@
       }
     },
     "actCreation": {
+      "mass": "En masse",
+      "byId": "Par Identifiant",
       "carouselItem": {
         "CONSUMING": "En cours consommation",
         "EXPORT_CONS": "Export consommation",
