FEAT: Ajout de la langue dans la création de user

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -567,6 +567,7 @@
         "partner": "Partenaire",
         "group": "Compte groupe"
       },
+      "language": "Langue",
       "searchUser": "Rechercher un utilisateur",
       "simcards": "Cartes SIM",
       "supervision": "Options de supervision",
