FIX: Changement du nom du label du widget de conso

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -126,7 +126,7 @@
     "widgets": {
       "orders": "Mes commandes",
       "bills": "Dernières factures",
-      "currentUsage": "En cours de consommation",
+      "currentUsage": "Suivi Conso",
       "orderStatus": "Statut des commandes",
       "acts": "Acte de gestion",
       "activationAct": "Actes: Activation",
