FEAT: Nouveau bouton export sur le tableau des lignes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -2040,5 +2040,13 @@
     "MultiSelectSearch": {
       "showLess": "Afficher moins"
     }
+  },
+
+  "exportTable": {
+    "classic": "Classique",
+    "complete": "Complet",
+    "lastUsage": "Dernier usage",
+    "inProgress": "Encours",
+    "services": "Services"
   }
 }
