--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1546,7 +1546,8 @@
         "DATA_NOT_FOUND": "Introuvable",
         "NEW_DATA_ALREADY_EXISTS": "Ligne existante",
         "DATA_NOT_ACTIVATED": "Ligne non activée",
-        "DATA_WRONG_STATUS": "Statut invalide",
+        "OK": " lignes ont le statut attendu",
+        "DATA_WRONG_STATUS": "{count} lignes n'ont pas le statut attendu",
         "DATA_NOT_AUTHORIZED": "Action non autorisée",
         "NEW_DATA_INVALID_FORMAT": "Format de la nouvelle valeur invalide",
         "EMPTY_FILE": "Fichier vide",
